# lambxekutor

./: Cargo.toml  README.md  flake.nix
lambxekutor_cli/: Cargo.toml
lambxekutor_cli/src/: main.rs
lambxekutor_lib/: Cargo.toml
lambxekutor_lib/src/: lib.rs
lambxekutor_lib/src/evaluation/: applicative.rs  mod.rs  normal.rs  shared.rs
lambxekutor_lib/src/expression/: identifier.rs  lambda.rs  mod.rs  raw_lambda.rs
